Animation menu correction

--- a/assets/sass/utils/_animations.scss
+++ b/assets/sass/utils/_animations.scss
@@ -1,44 +1,55 @@
 .anim-1 {
     animation-name: bounceIn;
     animation-duration: 2s;
+    animation-fill-mode: forwards;
+
 }
 .anim-2 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 200ms;
+    animation-fill-mode: forwards;
 }
 .anim-3 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 400ms;
+    animation-fill-mode: forwards;
+
 }
 .anim-4 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 600ms;
+    animation-fill-mode: forwards;
 }
 .anim-5 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 800ms;
+    animation-fill-mode: forwards;
 }
 .anim-6 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 1000ms;
+    animation-fill-mode: forwards;
 }
 .anim-7 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 1200ms;
+    animation-fill-mode: forwards;
 }
 .anim-8 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 1400ms;
+    animation-fill-mode: forwards;
 }
 .anim-9 {
     animation-name: bounceIn;
     animation-duration: 2s;
     animation-delay: 1600ms;
+    animation-fill-mode: forwards;
 }
