--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,73 +51,75 @@ h2 {
 .anim-1 {
   animation-name: bounceIn;
   animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 .anim-2 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 200ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-3 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 400ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-4 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 600ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-5 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 800ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-6 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 1000ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-7 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 1200ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-8 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 1400ms;
+  animation-fill-mode: forwards;
 }
 
 .anim-9 {
   animation-name: bounceIn;
   animation-duration: 2s;
   animation-delay: 1600ms;
+  animation-fill-mode: forwards;
 }
 
 @keyframes bounceIn {
   0% {
-    transform: scaleY(0);
     opacity: 0;
-  }
-  17% {
-    transform: scaleY(0.18);
-  }
-  24% {
-    transform: scaleY(0.4);
-  }
-  46% {
-    transform: scaleY(0.81);
+    margin-top: 30px;
+    margin-bottom: 0;
   }
   100% {
-    transform: scaleY(1);
     opacity: 1;
+    animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
   }
 }
 footer {
