--- a/assets/sass/utils/_keyframes.scss
+++ b/assets/sass/utils/_keyframes.scss
@@ -1,19 +1,13 @@
 @keyframes bounceIn {
     0% {
-        transform: scaleY(0);
         opacity: 0;
+        margin-top: 30px;
+        margin-bottom: 0;
     }
-    17% {
-        transform: scaleY(.18);
-    }   
-    24% {
-        transform: scaleY(.4);
-    }
-    46% {
-        transform: scaleY(.81);
-    }
+
     100% {
-        transform: scaleY(1);
         opacity: 1;
+        animation-fill-mode: forwards;
+        animation-fill-mode: forwards;
     }
 }
