--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,6 @@ h2 {
   100% {
     opacity: 1;
     animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
   }
 }
 .like-icon {
@@ -189,15 +188,20 @@ h1 {
   margin-top: 3px;
 }
 
-.header > h1 {
+.header > h1 > h1 {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 100%;
 }
-.header > h1 .return > .fas {
+
+.return {
+  float: left;
+  margin-left: 20px;
+}
+.return > .fas {
   font-size: 20px;
-  justify-content: flex-start;
+  color: black;
 }
 
 .location {
