--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -12,12 +12,18 @@ h1 {
     margin-top: 3px;
 }
 .header > h1 {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    & .return > .fas {
+    & > h1 {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+}
+.return {
+    float: left;
+    margin-left: 20px;
+    & > .fas {
         font-size: 20px;
-        justify-content: flex-start;
+        color: black;
     }
 }
