--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -5,7 +5,7 @@
     -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
 }
 h1 {
-    padding: 20px;
+    padding: 20px 0;
     margin: 0;
 }
 .location {
