Correction textes menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,10 @@ h2 {
   display: inline;
 }
 
+.like-icon > .fas {
+  color: #9356DC;
+}
+
 footer {
   background-color: #363636;
 }
@@ -327,7 +331,7 @@ body {
   margin-left: -13px;
 }
 .presentation__card-count > p {
-  border: solid 1px;
+  border: solid 0px;
   font-size: 12px;
   border-radius: 20px;
   padding: 5px 9px;
@@ -414,28 +418,28 @@ body {
   transition-duration: 5s;
 }
 .menu__card:hover .menu__card-animation > .fas {
-  transform: rotate(0deg);
-  transition-duration: 1s;
+  transform: rotate(360deg);
+  transition-duration: 800ms;
 }
 .menu__card:hover .menu__card-container {
-  width: 85%;
-  transition-duration: 1s;
+  width: 81%;
+  transition-duration: 800ms;
 }
 
 .menu__card-animation {
-  width: 50px;
+  width: 65px;
   text-align: center;
-  margin-right: -50px;
+  margin-right: -65px;
   margin-left: 10px;
   background-color: #99e2d1;
-  height: 61px;
+  height: 65px;
   align-items: center;
 }
 .menu__card-animation .fas {
   color: white;
-  font-size: 16px;
+  font-size: 22px;
   margin-top: 23px;
-  transform: rotate(180deg);
+  transform: rotate(-180deg);
 }
 
 .menu__command {
