--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ h2 {
   padding: 0 20px;
 }
 
+.margin__0 {
+  margin: 0;
+}
+
 @media screen and (max-width: 1250px) {
   .content {
     padding: 0 10px;
@@ -200,9 +204,16 @@ h1 {
 .return {
   float: left;
   margin-left: 20px;
+  margin-top: 35px;
+  font-size: 20px;
+}
+.return > a {
+  color: black;
+}
+.return > a:visited {
+  color: black;
 }
 .return > .fas {
-  font-size: 20px;
   color: black;
 }
 
@@ -365,7 +376,7 @@ body {
   border: 25px;
   display: flex;
   justify-content: space-between;
-  column-gap: 20px;
+  column-gap: 30px;
   padding: 0 20px;
 }
 .menu__container h3 {
@@ -385,6 +396,7 @@ body {
 
 .menu__column {
   flex: 1 1 350px;
+  min-height: 330px;
 }
 
 .menu__card {
@@ -408,10 +420,16 @@ body {
 }
 .menu__card-container {
   width: 100%;
+  padding-left: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .menu__card-text {
   margin-left: 5px;
   margin-bottom: 5px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 .menu__card:hover .menu__card-animation {
   margin-right: 0;
@@ -422,7 +440,7 @@ body {
   transition-duration: 800ms;
 }
 .menu__card:hover .menu__card-container {
-  width: 81%;
+  width: 79%;
   transition-duration: 800ms;
 }
 
@@ -446,7 +464,7 @@ body {
   background-color: #f6f6f6;
   margin-top: 0;
   margin-bottom: 0;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .background-loader {
