--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -42,8 +42,7 @@
     }
 }
 .menu__column {
-    flex: 1 1 350px;
-    min-height: 330px;
+    flex: 1;
 }
 .menu__card {
     background-color: white;
@@ -67,6 +66,9 @@
         padding-left: 5px;
         overflow: hidden;
         text-overflow: ellipsis;
+        &:hover{
+            width:calc(100% - 80px)
+        }
     }
     &-text {
         margin-left: 5px;
@@ -84,7 +86,6 @@
         }
     }
     &:hover .menu__card-container {
-        width: 79%;
         transition-duration: 800ms;
     }
 }
