--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ h2 {
 
   .menu__column {
     width: 100%;
+    max-width: 100%;
   }
 }
 @media screen and (max-width: 950px) {
@@ -184,6 +185,10 @@ h3.footer__title {
   text-align: center;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
 }
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+}
 
 h1 {
   padding: 20px 0;
@@ -215,6 +220,10 @@ h1 {
 }
 .return > .fas {
   color: black;
+}
+
+.block__invisible {
+  width: 37px;
 }
 
 .location {
@@ -395,8 +404,7 @@ body {
 }
 
 .menu__column {
-  flex: 1 1 350px;
-  min-height: 330px;
+  flex: 1;
 }
 
 .menu__card {
@@ -424,6 +432,9 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.menu__card-container:hover {
+  width: calc(100% - 80px);
+}
 .menu__card-text {
   margin-left: 5px;
   margin-bottom: 5px;
@@ -440,7 +451,6 @@ body {
   transition-duration: 800ms;
 }
 .menu__card:hover .menu__card-container {
-  width: 79%;
   transition-duration: 800ms;
 }
 
