--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,10 @@
 .header {
     text-align: center;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
+    &__menu {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 h1 {
     padding: 20px 0;
@@ -22,14 +26,16 @@ h1 {
     margin-left: 20px;
     margin-top: 35px;
     font-size: 20px;
-    & > a 
-    {
+    & > a {
         color: black;
-        &:visited{
+        &:visited {
             color: black;
         }
     }
     & > .fas {
         color: black;
     }
+}
+.block__invisible {
+    width: 37px;
 }
