--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     background-color: #363636;
+    margin-top: 40px;
 }
 h3.footer__title {
     color: white;
@@ -28,5 +29,10 @@ h3.footer__title {
     }
 }
 .fa-utensils{
-    margin-right: 7px;
+ font-size: 12px;
+ margin-right: 5px;
+}
+.fa-hands-helping
+{
+    font-size: 11px;
 }
