--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -108,5 +108,5 @@
     background-color: #f6f6f6;
     margin-top: 0;
     margin-bottom: 0;
-    padding: 0 20px 20px 20px;
+    padding: 30px 20px 20px 20px;
 }
