--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -1,5 +1,6 @@
 .restaurant {
     background-color: #fafafa;
+    padding: 0 20px;
     &__card {
         flex: 1 1 auto;
         width: 49%;
@@ -8,7 +9,7 @@
         @include radius;
         margin-bottom: 20px;
         &-text {
-            padding: 20px;
+            padding: 10px 20px;
             & > a p {
                 margin: 0;
                 color: black;
