--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,7 +451,8 @@ body {
   opacity: 0;
 }
 .menu__card-title > h4 {
-  margin: 10px 5px;
+  margin: 5px;
+  font-size: 17px;
 }
 .menu__card-footer {
   display: flex;
@@ -469,9 +470,13 @@ body {
 .menu__card-text {
   margin-left: 5px;
   margin-bottom: 5px;
+  font-size: 14px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+.menu__card-price {
+  font-weight: bold;
 }
 .menu__card:hover .menu__card-animation {
   margin-right: 0;
