Correction marge footer

--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -1,6 +1,6 @@
 .restaurant {
     background-color: #fafafa;
-    padding: 0 20px;
+    padding: 0 20px 60px 20px;
     &__card {
         flex: 1 1 auto;
         width: 49%;
