--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -1,7 +1,7 @@
 .reservation {
     text-align: center;
     background-color: #fafafa;
-    padding: 0 20px 20px 20px;
+    padding: 0 20px;
     & > h2 {
         padding: 40px 0 0 0;
     }
