--- a/assets/sass/utils/_animations.scss
+++ b/assets/sass/utils/_animations.scss
@@ -53,3 +53,9 @@
     animation-delay: 1600ms;
     animation-fill-mode: forwards;
 }
+.anim-10 {
+    animation-name: bounceIn;
+    animation-duration: 1200ms;
+    animation-delay: 2000ms;
+    animation-fill-mode: forwards;
+}
