--- a/assets/sass/utils/_media.scss
+++ b/assets/sass/utils/_media.scss
@@ -13,6 +13,9 @@
         }
         &__card {
             width: 100%;
+            & > a img {
+                height: 150px;
+            }
         }
     }
     .menu__container{
