--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -1,11 +1,14 @@
 .reservation {
     text-align: center;
     background-color: #fafafa;
-    padding: 0 20px;
+    padding: 0 20px 25px 20px;
     & > h2 {
         padding: 40px 0 0 0;
     }
     &__text {
         margin-bottom: 30px;
+    }
+    & > a {
+    width: 220px;
     }
 }
