--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -21,7 +21,7 @@ h3.footer__title {
             & a {
                 color: white;
                 &:hover{
-                    border-bottom: 1px solid;
+                    text-decoration: none;
                 }
             }
         }
