--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,9 +36,6 @@ h2 {
   .presentation__card {
     width: 100%;
   }
-  .presentation__card > a img {
-    height: 150px;
-  }
 
   .menu__container {
     flex-direction: column;
@@ -59,6 +56,10 @@ h2 {
   .menu__column {
     width: 100%;
     max-width: 100%;
+  }
+
+  .restaurant__card > a img {
+    height: 150px;
   }
 }
 @media screen and (max-width: 950px) {
@@ -217,7 +218,7 @@ h3.footer__title {
   color: white;
 }
 .footer__bloc > ul li a:hover {
-  border-bottom: 1px solid;
+  text-decoration: none;
 }
 
 .fa-utensils {
@@ -562,6 +563,7 @@ body {
   animation-duration: 0ms;
   animation-delay: 2.75s;
   animation-fill-mode: both;
+  z-index: 1;
 }
 
 #circularG {
