--- a/assets/sass/layout/_loader.scss
+++ b/assets/sass/layout/_loader.scss
@@ -10,7 +10,7 @@
   animation-duration: 0ms;
   animation-delay: 2.75s;
   animation-fill-mode: both;
-
+  z-index:1;
 }
 #circularG{
 	position:relative;
