--- a/assets/sass/utils/_media.scss
+++ b/assets/sass/utils/_media.scss
@@ -6,7 +6,7 @@
         margin-left: 10px;
     }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1038px) {
     .presentation {
         &__container {
             flex-direction: column;
@@ -34,7 +34,7 @@
         max-width: 100%;
     }
     .restaurant__card > a img {
-        height: 150px;
+        height: 150px !important;
     }
 }
 @media screen and (max-width: 950px) {
