Correction background__image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,10 @@ h2 {
     width: 100%;
   }
 
+  .background__cover img {
+    height: 250px;
+  }
+
   .menu__container {
     flex-direction: column;
   }
