--- a/assets/sass/utils/_media.scss
+++ b/assets/sass/utils/_media.scss
@@ -15,6 +15,9 @@
             width: 100%;
         }
     }
+    .background__cover img {
+        height: 250px;
+    }
     .menu__container {
         flex-direction: column;
     }
